--- a/Delivery service/Delivery service.csproj
+++ b/Delivery service/Delivery service.csproj
@@ -50,66 +50,66 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ForOwner.cs">
+    <Compile Include="MainMenu\Owner\ForOwner.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ForOwner.Designer.cs">
+    <Compile Include="MainMenu\Owner\ForOwner.Designer.cs">
       <DependentUpon>ForOwner.cs</DependentUpon>
     </Compile>
-    <Compile Include="ForEmployee.cs">
+    <Compile Include="MainMenu\Employee\ForEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ForEmployee.Designer.cs">
+    <Compile Include="MainMenu\Employee\ForEmployee.Designer.cs">
       <DependentUpon>ForEmployee.cs</DependentUpon>
     </Compile>
-    <Compile Include="ForClient.cs">
+    <Compile Include="MainMenu\Client\ForClient.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ForClient.Designer.cs">
+    <Compile Include="MainMenu\Client\ForClient.Designer.cs">
       <DependentUpon>ForClient.cs</DependentUpon>
     </Compile>
-    <Compile Include="InfoDeliveryForClient.cs">
+    <Compile Include="MainMenu\Client\InfoDeliveryForClient.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InfoDeliveryForClient.Designer.cs">
+    <Compile Include="MainMenu\Client\InfoDeliveryForClient.Designer.cs">
       <DependentUpon>InfoDeliveryForClient.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="Auth\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="Auth\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewUser.cs">
+    <Compile Include="Auth\NewUser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewUser.Designer.cs">
+    <Compile Include="Auth\NewUser.Designer.cs">
       <DependentUpon>NewUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResPass.cs">
+    <Compile Include="Auth\ResPass.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ResPass.Designer.cs">
+    <Compile Include="Auth\ResPass.Designer.cs">
       <DependentUpon>ResPass.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ForOwner.resx">
+    <EmbeddedResource Include="MainMenu\Owner\ForOwner.resx">
       <DependentUpon>ForOwner.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ForEmployee.resx">
+    <EmbeddedResource Include="MainMenu\Employee\ForEmployee.resx">
       <DependentUpon>ForEmployee.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ForClient.resx">
+    <EmbeddedResource Include="MainMenu\Client\ForClient.resx">
       <DependentUpon>ForClient.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InfoDeliveryForClient.resx">
+    <EmbeddedResource Include="MainMenu\Client\InfoDeliveryForClient.resx">
       <DependentUpon>InfoDeliveryForClient.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="Auth\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewUser.resx">
+    <EmbeddedResource Include="Auth\NewUser.resx">
       <DependentUpon>NewUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -117,7 +117,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ResPass.resx">
+    <EmbeddedResource Include="Auth\ResPass.resx">
       <DependentUpon>ResPass.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -206,6 +206,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\Pictures\Open_pass_on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MainMenu\Admin\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Pictures\FullScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Pictures\FullScreen_enter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Pictures\Hide.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Pictures\Hide_enter.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
